--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "ansi-colours",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/ansi-colours.cjs",
+  "exports": {
+    ".": {
+      "require": "./dist/ansi-colours.cjs",
+      "import": "./dist/ansi-colours.mjs"
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +24,12 @@
   },
   "homepage": "https://github.com/JamesRobertHugginsNgo/ansi-colours#readme",
   "devDependencies": {
-    "eslint": "^8.30.0"
+    "@babel/core": "^7.20.7",
+    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
+    "del": "^7.0.0",
+    "eslint": "^8.30.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-rename": "^2.0.0"
   }
 }
